# keycloak-mcp-server

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  test_script.py
.github/: PULL_REQUEST_TEMPLATE.md  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  labels.yml
src/keycloak_mcp_server/: __init__.py  __main__.py  client.py  config.py  server.py
src/keycloak_mcp_server/endpoints/: __init__.py  attack_detection.py  authentication.py  certificates.py  client_initial_access.py  client_registration_policy.py  client_role_mappings.py  client_scopes.py  clients.py  component.py  groups.py  identity_providers.py  key.py  organizations.py  protocol_mappers.py  realms.py  roles.py  roles_by_id.py  scope_mappings.py  users.py
tests/: test_e2e.py  test_server.py
